# car-menu

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bluetooth.rs  general.rs  main.rs  schemas.rs  security.rs  wifi.rs
src/atoms/: security.ts  settings.ts  theme.ts
src/components/: CodeVerifyModal.tsx  FastActionButton.tsx  FastActionMenu.tsx  MainScreen.tsx  SettingsSidebar.tsx  SidebarLink.tsx
src/components/Applications/: ApplicationShortcut.tsx
src/components/Controllers/: DarkModeController.tsx  PublicSecurityController.tsx
src/components/Settings/: AudioSettingsPage.tsx  BluetoothSettingsPage.tsx  GeneralSettingsPage.tsx  SecuritySettingsPage.tsx  WifiSettingsPage.tsx
src/components/Settings/Components/: LineHeader.tsx  LineItem.tsx  Toggle.tsx
