[package]
name = "car_menu"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bluer = { version = "0.17.1", features = ["full"] }
futures = "0.3.30"
tokio = "1.37.0"
log = "0.4.21"
networkmanager = "0.4.1"
dbus = "0.9.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
